<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_events"
        android:title="@string/action_events"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:title="@string/action_contact"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_donate"
        android:title="@string/action_donate"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="500"
        app:showAsAction="never" />

</menu>